--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1"
   },
-  "engines": {"node": "15.5.1", "npm": "7.3.0"}
-
+  "engines": {
+    "node": "15.5.1",
+    "npm": "7.3.0"
+  }
 }
